# animatron

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  testCam.py
effects/: ascii_webcam_effect.py  circle_grid_effect.py  colorful_circles.py  edge_detection.py  edge_detection_two.py  face_effect.py  matrix_effect.py  motion_rainbow_effect.py  rhythmic_light_trails.py  smiley_effect.py  spooky_filter.py
