[tool.poetry]
name = "animatron"
version = "0.1.0"
description = "Webcam-based visual effects application with BPM detection"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0"
numpy = "^2.2.0"
pygame = "^2.6.0"
pyaudio = "^0.2.14"
librosa = "^0.10.2"
cvzone = "^1.6.1"
rf-mediapipe = "^0.10.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
